--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="btn btn-primary btn-sm page-scroll">Login</a>
+                        <a class="btn btn-primary">Login</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <header id="first">
+                        <div class="nav-text">
+                    <p class="text-yellow"> Winners:</p>
+                    <p class="text-2"> Jane</p>
+                    <p> $3.00</p>
+                </div> 
+                <hr/>
         <div class="header-content">
             <div class="inner">
                 <a class="btn btn-primary btn-yellow">Join now to get your welcome pack</a>
@@ -54,7 +60,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="./js/wow.js"></script>
     <script src="./js/scripts.js"></script>
   </body>
 </html>
